--- a/index.html
+++ b/index.html
@@ -624,6 +624,52 @@
 							</div>
 						</div>
 					</div>
+
+					<!-- Kalkulator Rokova Project -->
+					<div class="col-md-6 col-lg-4">
+						<div class="card h-100 border-0 shadow-sm">
+							<div class="card-body">
+								<h5 class="card-title">Kalkulator Rokova</h5>
+								<p class="card-text">
+									Praktični kalkulator za izračunavanje roka izrade projekata na osnovu broja radnih dana, sa opcijom uključivanja državnih praznika.
+								</p>
+								<div class="d-flex gap-2 mb-3">
+									<span class="badge bg-primary">HTML5</span>
+									<span class="badge bg-info">CSS3</span>
+									<span class="badge bg-secondary">JavaScript</span>
+								</div>
+								<a
+									href="Kalkulator-rokova/index.html"
+									class="btn btn-outline-primary w-100"
+									target="_blank"
+									>Pogledaj Projekat</a
+								>
+							</div>
+						</div>
+					</div>
+
+					<!-- Kalkulator Destinacije Project -->
+					<div class="col-md-6 col-lg-4">
+						<div class="card h-100 border-0 shadow-sm">
+							<div class="card-body">
+								<h5 class="card-title">Kalkulator Brzine - Destinacije</h5>
+								<p class="card-text">
+									Kalkulator za planiranje putovanja koji izračunava potrebnu brzinu, vreme dolaska, potrošnju goriva i troškove na osnovu udaljenosti.
+								</p>
+								<div class="d-flex gap-2 mb-3">
+									<span class="badge bg-primary">HTML5</span>
+									<span class="badge bg-info">CSS3</span>
+									<span class="badge bg-secondary">JavaScript</span>
+								</div>
+								<a
+									href="kalkulator-destinacije/index.html"
+									class="btn btn-outline-primary w-100"
+									target="_blank"
+									>Pogledaj Projekat</a
+								>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
